k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cipherlink
  labels:
    app: realtime-encrypted-messenger
