k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cipherlink-frontend
  namespace: cipherlink
  labels:
    app: cipherlink-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cipherlink-frontend
  template:
    metadata:
      labels:
        app: cipherlink-frontend
    spec:
      containers:
        - name: frontend
          image: DOCKER_USERNAME/cem-frontend:IMAGE_TAG
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
